--- a/configure.in
+++ b/configure.in
@@ -301,6 +301,12 @@ AC_ARG_ENABLE([sigmasmp],
   [use_sigmasmp=$enableval],
   [use_sigmasmp=no])
 
+AC_ARG_ENABLE([x11],
+  [AS_HELP_STRING([--disable-x11],
+  [disable x11])],
+  [use_x11=$enableval],
+  [use_x11=yes])
+
 ### External libraries options
 AC_ARG_ENABLE([external-libraries],
   [AS_HELP_STRING([--enable-external-libraries],
@@ -673,15 +679,17 @@ else
   PKG_CHECK_MODULES([ENCA],  [enca],
     [INCLUDES="$INCLUDES $ENCA_CFLAGS"; LIBS="$LIBS $ENCA_LIBS"],
     AC_MSG_ERROR($missing_library))
-  PKG_CHECK_MODULES([XT],    [xt],
-    [INCLUDES="$INCLUDES $XT_CFLAGS"; LIBS="$LIBS $XT_LIBS"],
-    AC_MSG_ERROR($missing_library))
-  PKG_CHECK_MODULES([XEXT],  [xext],
-    [INCLUDES="$INCLUDES $XEXT_CFLAGS"; LIBS="$LIBS $XEXT_LIBS"],
-    AC_MSG_ERROR($missing_library))
-  PKG_CHECK_MODULES([XMU],   [xmu],
-    [INCLUDES="$INCLUDES $XMU_CFLAGS"; LIBS="$LIBS $XMU_LIBS"],
-    AC_MSG_ERROR($missing_library))
+  if test "x$use_x11" != "xno"; then
+	PKG_CHECK_MODULES([XT],    [xt],
+      [INCLUDES="$INCLUDES $XT_CFLAGS"; LIBS="$LIBS $XT_LIBS"],
+	  AC_MSG_ERROR($missing_library))
+    PKG_CHECK_MODULES([XEXT],  [xext],
+	  [INCLUDES="$INCLUDES $XEXT_CFLAGS"; LIBS="$LIBS $XEXT_LIBS"],
+      AC_MSG_ERROR($missing_library))
+	PKG_CHECK_MODULES([XMU],   [xmu],
+      [INCLUDES="$INCLUDES $XMU_CFLAGS"; LIBS="$LIBS $XMU_LIBS"],
+	  AC_MSG_ERROR($missing_library))
+  fi
   PKG_CHECK_MODULES([DBUS],  [dbus-1],
     [INCLUDES="$INCLUDES $DBUS_CFLAGS"; LIBS="$LIBS $DBUS_LIBS"],
     AC_MSG_ERROR($missing_library))
@@ -1381,6 +1389,13 @@ else
   final_message="$final_message\n  Optical drive:\tNo"
 fi
 
+if test "$use_x11" = "yes"; then
+    AC_DEFINE([HAVE_X11], [1], [Define to 1 to have X11])
+    USE_X11=1
+else
+    USE_X11=0
+fi
+
 ### External libraries messages
 if test "$use_external_ffmpeg" = "yes"; then
   final_message="$final_message\n  External FFmpeg:\tYes"
@@ -1476,6 +1491,7 @@ AC_SUBST(LIBMAD_BASENAME)
 AC_SUBST(LIBOGG_BASENAME)
 AC_SUBST(LIBVORBISENC_BASENAME)
 AC_SUBST(LIBVORBIS_BASENAME)
+AC_SUBST(USE_X11)
 AC_SUBST(LIBWAVPACK_BASENAME)
 AC_SUBST(LIBASS_BASENAME)
 AC_SUBST(LIBMEPG2_BASENAME)
