[sigma] add flags needed for python cross

--- a/configure.in
+++ b/configure.in
@@ -344,6 +344,11 @@ MAKE="${MAKE:-make}"
 case $host in
   mips-*-linux-gnu)
      ARCH="mipsel-linux"
+     PYTHON_VERSION="2.6"
+     PYTHON_CPPFLAGS="-I${prefix}/include/python2.6"
+     PYTHON_LDFLAGS="-L${prefix}/lib -lpython2.6"
+     PYTHON_SITE_PKG="${prefix}/lib/python2.6/site-packages"
+     PYTHON_NOVERSIONCHECK="no-check"
      ;;
   i*86*-linux-gnu*)
      ARCH="i486-linux"
