[sigma] external python is now the only option

--- a/tools/sigma/Makefile
+++ b/tools/sigma/Makefile
@@ -4,7 +4,7 @@ SOURCE=../../
 # configuration settings
 export PKG_CONFIG_PATH=$(BUILDPREFIX)/lib/pkgconfig
 CONFIGURE=./configure --host=$(HOST) --prefix=/usr --with-build-prefix=$(BUILDPREFIX) \
-  --enable-external-python --enable-gles --disable-xrandr \
+  --enable-gles --disable-xrandr \
   --disable-optical-drive --disable-dvdcss --enable-optimizations \
   --disable-x11 --disable-webserver --disable-joystick --disable-libbluray \
   --enable-sigmasmp
