[sigma] headers are now properly installed in rootfs, use them

--- a/xbmc/cores/smpplayer/Makefile.in
+++ b/xbmc/cores/smpplayer/Makefile.in
@@ -1,4 +1,4 @@
-CXXFLAGS+= -isystem$(DCCHD_DIR)/core -isystem$(DCCHD_DIR)/mono
+CXXFLAGS+= -isystem${BUILDPREFIX}/include/dcchd/core -isystem${BUILDPREFIX}/include/dcchd/mono
 
 SRCS=	\
 	FileIDataSource.cpp \
