[sigma] libmicrohttpd is now installed in rootfs so we can enable the webserver

--- a/tools/sigma/Makefile
+++ b/tools/sigma/Makefile
@@ -6,7 +6,7 @@ export PKG_CONFIG_PATH=$(BUILDPREFIX)/lib/pkgconfig
 CONFIGURE=./configure --host=$(HOST) --prefix=/usr --with-build-prefix=$(BUILDPREFIX) \
   --enable-gles --disable-xrandr \
   --disable-optical-drive --disable-dvdcss --enable-optimizations \
-  --disable-x11 --disable-webserver --disable-joystick --disable-libbluray \
+  --disable-x11 --disable-joystick --disable-libbluray \
   --enable-sigmasmp
 all: configure
 
