--- a/Makefile.in
+++ b/Makefile.in
@@ -81,6 +81,7 @@ endif
 ifeq (@USE_OPENGLES@,1)
 BIN_DIRS += xbmc/rendering/gles
 BIN_DIRS += xbmc/windowing/egl
+BIN_DIRS += xbmc/windowing/dfb
 endif
 
 ifeq ($(findstring osx,@ARCH@),osx)
@@ -285,6 +286,8 @@ xbmc/windowing/windowing.a: force
 	$(MAKE) -C xbmc/windowing
 xbmc/windowing/egl/windowing_egl.a: force
 	$(MAKE) -C xbmc/windowing/egl
+xbmc/windowing/dfb/windowing_dfb.a: force
+	$(MAKE) -C xbmc/windowing/dfb
 xbmc/windowing/osx/windowing_osx.a: force
 	$(MAKE) -C xbmc/windowing/osx
 xbmc/storage/storage.a: force
@@ -508,7 +511,8 @@ endif
 ifeq (@USE_OPENGLES@,1)
 OBJSXBMC+= \
 	xbmc/rendering/gles/rendering_gles.a \
-	xbmc/windowing/egl/windowing_egl.a
+	xbmc/windowing/egl/windowing_egl.a \
+	xbmc/windowing/dfb/windowing_dfb.a
 endif
 
 ifeq (@HAVE_XBMC_NONFREE@,1)
