--- a/configure.in
+++ b/configure.in
@@ -669,17 +669,18 @@ AS_CASE([x$use_libbluray],
 # platform dependent libraries
 if test "$host_vendor" = "apple" ; then
   AC_CHECK_LIB([iconv],     [main],, AC_MSG_ERROR($missing_library))
+  use_sdl=no;
+  use_directfb=no;
   if test "$use_arch" != "arm"; then
     AC_CHECK_LIB([SDL_mixer],[main],, AC_MSG_ERROR($missing_library))
     AC_CHECK_LIB([SDL],      [main],, AC_MSG_ERROR($missing_library))
+    use_sdl=yes
   fi
 else
-  AC_CHECK_LIB([SDL_mixer],  [main],, AC_MSG_ERROR($missing_library))
   AC_CHECK_LIB([dl],         [main],, AC_MSG_ERROR($missing_library))
   AC_CHECK_LIB([resolv],     [main],, AC_MSG_ERROR($missing_library))
   AC_CHECK_LIB([jasper],     [main],, AC_MSG_ERROR($missing_library)) # check for cximage
   AC_CHECK_LIB([rt],         [clock_gettime],, AC_MSG_ERROR($missing_library))
-  AC_CHECK_LIB([SDL_image],  [main],, AC_MSG_ERROR($missing_library))
 
   PKG_CHECK_MODULES([ALSA],  [alsa],
     [INCLUDES="$INCLUDES $ALSA_CFLAGS"; LIBS="$LIBS $ALSA_LIBS"],
@@ -687,23 +688,38 @@ else
   PKG_CHECK_MODULES([ENCA],  [enca],
     [INCLUDES="$INCLUDES $ENCA_CFLAGS"; LIBS="$LIBS $ENCA_LIBS"],
     AC_MSG_ERROR($missing_library))
+
   if test "x$use_x11" != "xno"; then
-	PKG_CHECK_MODULES([XT],    [xt],
-      [INCLUDES="$INCLUDES $XT_CFLAGS"; LIBS="$LIBS $XT_LIBS"],
-	  AC_MSG_ERROR($missing_library))
-    PKG_CHECK_MODULES([XEXT],  [xext],
-	  [INCLUDES="$INCLUDES $XEXT_CFLAGS"; LIBS="$LIBS $XEXT_LIBS"],
+    PKG_CHECK_MODULES([XT],  [xt],
+        [INCLUDES="$INCLUDES $XT_CFLAGS"; LIBS="$LIBS $XT_LIBS"],
       AC_MSG_ERROR($missing_library))
-	PKG_CHECK_MODULES([XMU],   [xmu],
-      [INCLUDES="$INCLUDES $XMU_CFLAGS"; LIBS="$LIBS $XMU_LIBS"],
-	  AC_MSG_ERROR($missing_library))
+      PKG_CHECK_MODULES([XEXT], [xext],
+      [INCLUDES="$INCLUDES $XEXT_CFLAGS"; LIBS="$LIBS $XEXT_LIBS"],
+        AC_MSG_ERROR($missing_library))
+    PKG_CHECK_MODULES([XMU], [xmu],
+        [INCLUDES="$INCLUDES $XMU_CFLAGS"; LIBS="$LIBS $XMU_LIBS"],
+      AC_MSG_ERROR($missing_library))
   fi
-#  PKG_CHECK_MODULES([DBUS],  [dbus-1],
-#    [INCLUDES="$INCLUDES $DBUS_CFLAGS"; LIBS="$LIBS $DBUS_LIBS"],
-#    AC_MSG_ERROR($missing_library))
-  PKG_CHECK_MODULES([SDL],   [sdl],
-    [INCLUDES="$INCLUDES $SDL_CFLAGS"; LIBS="$LIBS $SDL_LIBS"],
-    AC_MSG_ERROR($missing_library))
+
+  use_sdl=no;
+  use_directfb=no;
+  if test "$use_arch" = "mips"; then
+    # includes are handled in local makefiles to keep from spewing directfb includes around
+    PKG_CHECK_MODULES([DIRECTFB],  [directfb],
+      [LIBS="$LIBS $DIRECTFB_LIBS"],
+      AC_MSG_ERROR($missing_library))
+    use_directfb=yes;
+  else
+    AC_CHECK_LIB([SDL_mixer], [main],, AC_MSG_ERROR($missing_library))
+    AC_CHECK_LIB([SDL_image], [main],, AC_MSG_ERROR($missing_library))
+    PKG_CHECK_MODULES([SDL],  [sdl],
+      [INCLUDES="$INCLUDES $SDL_CFLAGS"; LIBS="$LIBS $SDL_LIBS"],
+      AC_MSG_ERROR($missing_library))
+    PKG_CHECK_MODULES([DBUS],  [dbus-1],
+      [INCLUDES="$INCLUDES $DBUS_CFLAGS"; LIBS="$LIBS $DBUS_LIBS"],
+      AC_MSG_ERROR($missing_library))
+    use_sdl=yes
+  fi
 fi
 
 XB_FIND_SONAME([MAD],         [mad])
@@ -1172,6 +1188,20 @@ else
   fi
 fi
 
+if test "x$use_sdl" != "xno"; then
+  USE_DIRECTFB=1
+  final_message="$final_message\n  SDL:\tYes"
+else
+  USE_DIRECTFB=0
+  final_message="$final_message\n  SDL:\tNo"
+fi
+
+if test "x$use_directfb" != "xno"; then
+  final_message="$final_message\n  DirectFB:\tYes"
+else
+  final_message="$final_message\n  DirectFB:\tNo"
+fi
+
 if test "x$use_vdpau" != "xno"; then
   final_message="$final_message\n  VDPAU:\tYes"
 else
@@ -1447,6 +1477,7 @@ OUTPUT_FILES="Makefile \
     xbmc/visualizations/OpenGLSpectrum/Makefile \
     xbmc/visualizations/WaveForm/Makefile \
     xbmc/visualizations/iTunes/Makefile \
+    xbmc/windowing/dfb/Makefile \
     tools/Linux/xbmc.sh \
     tools/Linux/xbmc-standalone.sh \
     tools/TexturePacker/Makefile \
@@ -1487,6 +1518,7 @@ AC_SUBST(LIBMEPG2_BASENAME)
 AC_SUBST_FILE(XBMC_STANDALONE_SH_PULSE)
 AC_SUBST(USE_OPENGL)
 AC_SUBST(USE_OPENGLES)
+AC_SUBST(USE_DIRECTFB)
 AC_SUBST(USE_VDPAU)
 AC_SUBST(USE_VAAPI)
 AC_SUBST(USE_CRYSTALHD)
