[smp] use @DIRECTFB_CFLAGS@ in makefiles that need it

--- a/xbmc/cores/smpplayer/Makefile.in
+++ b/xbmc/cores/smpplayer/Makefile.in
@@ -1,5 +1,5 @@
 CXXFLAGS+= \
-	-isystem@BUILDPREFIX@/include/directfb \
+	@DIRECTFB_CFLAGS@ \
 	-isystem@BUILDPREFIX@/include/dcchd/core \
 	-isystem@BUILDPREFIX@/include/dcchd/mono
 
