--- a/configure.in
+++ b/configure.in
@@ -601,8 +601,8 @@ fi
 # platform common libraries
 AC_CHECK_PROG(MYSQL_CONFIG, mysql_config, "yes", "no")
 if test $MYSQL_CONFIG = "yes"; then
-  INCLUDES="$INCLUDES `mysql_config --include`"
-  MYSQL_LIBS=`mysql_config --libs`
+  INCLUDES=INCLUDES ${use_build_prefix}/include/mysql
+  MYSQL_LIBS=-L${use_build_prefix}/lib/mysql -l mysqlclient
   LIBS="$LIBS $MYSQL_LIBS"
   AC_SUBST(MYSQL_LIBS)
 else
