--- a/configure.in
+++ b/configure.in
@@ -103,7 +103,7 @@ vdadecoder_disabled="== VDADecoder support manually disabled. =="
 vtbdecoder_enabled="== VTBDecoder support enabled. =="
 vtbdecoder_disabled="== VTBDecoder support manually disabled. =="
 openmax_disabled="== OpenMax support manually disabled. =="
-openmax_not_found="== Could not find libnvomx. OpenMax support disabled. =="
+openmax_not_found="== Could not find OpenMax libs. OpenMax support disabled. =="
 ssh_not_found="== Could not find libssh. SSH FTP VFS support disabled. =="
 librtmp_not_found="== Could not find libRTMP. RTMP support disabled. =="
 librtmp_disabled="== RTMP support disabled. =="
@@ -1222,14 +1222,23 @@ if test "$host_vendor" = "apple" ; then
   USE_OPENMAX=0
   AC_MSG_NOTICE($openmax_disabled)
 else
-  if test "$use_gles" = "yes" && test "$use_openmax" = "auto"; then
-    PKG_CHECK_MODULES([OPENMAX], [libomxil-bellagio],
-                      USE_OPENMAX=1;[INCLUDES="$INCLUDES $OPENMAX_CFLAGS"; LIBS="$LIBS $OPENMAX_LIBS"],
-                      use_openmax=no;USE_OPENMAX=0;AC_MSG_RESULT($openmax_not_found))
-  elif test "$use_gles" = "yes" && test "$use_openmax" = "yes"; then
-    PKG_CHECK_MODULES([OPENMAX], [libomxil-bellagio],
-                      USE_OPENMAX=1;[INCLUDES="$INCLUDES $OPENMAX_CFLAGS"; LIBS="$LIBS $OPENMAX_LIBS"],
-                      AC_MSG_ERROR($openmax_not_found))
+  if test "x$use_gles" != "xno" && test "x$use_openmax" != "xno"; then
+    if test "x$use_tegra" != "xno"; then
+      PKG_CHECK_MODULES([OPENMAX], [libomxil-bellagio],
+        USE_OPENMAX=1;[INCLUDES="$INCLUDES $OPENMAX_CFLAGS"; LIBS="$LIBS $OPENMAX_LIBS"],
+        AC_MSG_ERROR($openmax_not_found))
+    else
+      SAVE_CFLAGS="$CFLAGS"
+      CFLAGS="$CFLAGS -lopenmaxil"
+      AC_COMPILE_IFELSE(
+        [AC_LANG_SOURCE([#include <IL/OMX_Core.h>
+          void host_app_message_handler(void) {}])],
+        [ ], 
+        [ AC_MSG_ERROR($openmax_not_found) ])
+      CFLAGS="$SAVE_CFLAGS"
+      AC_DEFINE([HAVE_LIBOPENMAX], [2], [Define to 2 if you have the 'OpenMax' library.])
+      USE_OPENMAX=1
+    fi
   else
     AC_MSG_NOTICE($openmax_disabled)
     use_openmax=no
