--- a/configure.in
+++ b/configure.in
@@ -577,33 +577,33 @@ if test "$host_vendor" = "apple" ; then
     LIBS="$LIBS -framework DiskArbitration"
     LIBS="$LIBS -framework ApplicationServices"
   fi
-elif test "$use_arch" = "arm"; then
-  CFLAGS="$CFLAGS -mfloat-abi=softfp -mno-apcs-stack-check"
-  CXXFLAGS="$CXXFLAGS -mfloat-abi=softfp -mno-apcs-stack-check"
-  FFMPEG_EXTRACFLAGS="-mfloat-abi=softfp"
-  if test "$use_tegra" = "yes"; then
-    # Compile for ARMv7a architecture, need to test gcc for vfpv3-d16 support 
-    SAVE_CFLAGS="$CFLAGS"
-    CFLAGS="-mfpu=vfpv3-d16"
-    AC_COMPILE_IFELSE(
-      [AC_LANG_SOURCE([int foo;])],
-      [ CFLAGS="$SAVE_CFLAGS -Wno-psabi -Wa,-march=armv7a -mtune=cortex-a9 -mfpu=vfpv3-d16 -mthumb-interwork"
-        CXXFLAGS="$CXXFLAGS -Wno-psabi -Wa,-march=armv7a -mtune=cortex-a9 -mfpu=vfpv3-d16 -mthumb-interwork"
-        FFMPEG_EXTRACFLAGS="$FFMPEG_EXTRACFLAGS -mtune=cortex-a9 -mfpu=vfpv3-d16"
-        use_cpu=cortex-a9],
-      [ CFLAGS="$SAVE_CFLAGS -Wa,-march=armv6 -mtune=cortex-a8 -mthumb-interwork"
-        CXXFLAGS="$CXXFLAGS -Wa,-march=armv6 -mtune=cortex-a8 -mthumb-interwork"    
-        use_cpu=cortex-a8])
-  else
-    # Compile for ARMv7a architecture, CortexA8 cpu and check for enabled NEON coprocessor
-    CFLAGS="$CFLAGS -Wa,-march=armv7a -mcpu=cortex-a8"
-    CXXFLAGS="$CXXFLAGS -Wa,-march=armv7a -mcpu=cortex-a8"
-    if test "$use_neon" = "yes"; then 
-      CFLAGS="$CFLAGS -mfpu=neon -mvectorize-with-neon-quad"
-      CXXFLAGS="$CXXFLAGS -mfpu=neon -mvectorize-with-neon-quad"
-      FFMPEG_EXTRACFLAGS="$FFMPEG_EXTRACFLAGS -mfpu=neon"
-    fi
-  fi
+#elif test "$use_arch" = "arm"; then
+#  CFLAGS="$CFLAGS -mfloat-abi=softfp -mno-apcs-stack-check"
+#  CXXFLAGS="$CXXFLAGS -mfloat-abi=softfp -mno-apcs-stack-check"
+#  FFMPEG_EXTRACFLAGS="-mfloat-abi=softfp"
+#  if test "$use_tegra" = "yes"; then
+#    # Compile for ARMv7a architecture, need to test gcc for vfpv3-d16 support 
+#    SAVE_CFLAGS="$CFLAGS"
+#    CFLAGS="-mfpu=vfpv3-d16"
+#    AC_COMPILE_IFELSE(
+#      [AC_LANG_SOURCE([int foo;])],
+#      [ CFLAGS="$SAVE_CFLAGS -Wno-psabi -Wa,-march=armv7a -mtune=cortex-a9 -mfpu=vfpv3-d16 -mthumb-interwork"
+#        CXXFLAGS="$CXXFLAGS -Wno-psabi -Wa,-march=armv7a -mtune=cortex-a9 -mfpu=vfpv3-d16 -mthumb-interwork"
+#        FFMPEG_EXTRACFLAGS="$FFMPEG_EXTRACFLAGS -mtune=cortex-a9 -mfpu=vfpv3-d16"
+#        use_cpu=cortex-a9],
+#      [ CFLAGS="$SAVE_CFLAGS -Wa,-march=armv6 -mtune=cortex-a8 -mthumb-interwork"
+#        CXXFLAGS="$CXXFLAGS -Wa,-march=armv6 -mtune=cortex-a8 -mthumb-interwork"    
+#        use_cpu=cortex-a8])
+#  else
+#    # Compile for ARMv7a architecture, CortexA8 cpu and check for enabled NEON coprocessor
+#    CFLAGS="$CFLAGS -Wa,-march=armv7a -mcpu=cortex-a8"
+#    CXXFLAGS="$CXXFLAGS -Wa,-march=armv7a -mcpu=cortex-a8"
+#    if test "$use_neon" = "yes"; then 
+#      CFLAGS="$CFLAGS -mfpu=neon -mvectorize-with-neon-quad"
+#      CXXFLAGS="$CXXFLAGS -mfpu=neon -mvectorize-with-neon-quad"
+#      FFMPEG_EXTRACFLAGS="$FFMPEG_EXTRACFLAGS -mfpu=neon"
+#    fi
+#  fi
 fi
 
 # Checks for library functions.
@@ -1439,7 +1439,7 @@ else
         AC_MSG_ERROR($openmax_not_found))
     else
       SAVE_CFLAGS="$CFLAGS"
-      CFLAGS="$CFLAGS -lopenmaxil"
+      CFLAGS="$CFLAGS"
       AC_COMPILE_IFELSE(
         [AC_LANG_SOURCE([#include <IL/OMX_Core.h>
           void host_app_message_handler(void) {}])],
@@ -2103,6 +2103,7 @@ XB_CONFIG_MODULE([lib/ffmpeg], [
       --enable-protocol=http \
       --enable-pthreads \
       --enable-runtime-cpudetect \
+      --enable-hardcoded-tables \
       --custom-libname-with-major="\$(FULLNAME)-\$(LIBMAJOR)-${ARCH}\$(SLIBSUF)" \
       `case $host_cpu in i?86*) echo --disable-pic ;; *) echo --enable-pic ;; esac` \
       --cc="$CC" &&
