[rbp] fixed compile what we need

--- a/tools/rbp/depends/Makefile
+++ b/tools/rbp/depends/Makefile
@@ -2,15 +2,7 @@ include ../Makefile.include
 
 BUILDTOOLS = help2man autoconf automake libtool pkg-config yasm cmake patchelf
 
-SUBDIRS = \
-	pcre expat gettext readline sqlite3 libgpg-error libgcrypt \
-	bzip2 liblzo2 libxml2 freetype2 fontconfig \
-	openssl libssh2 curl \
-	libpng libjpeg tiff jasper \
-	libogg libvorbis libflac libmad fribidi libwavpack libmpeg2 \
-	libass libcdio libsamplerate \
-	libmicrohttpd libmodplug librtmp libbluray yajl \
-	samba dbus python26 mysqlclient boost xbmc \
+SUBDIRS = liblzo2
 
 IMAGENAME = xbmc-aml-`date +'%y%m%d'`
 
