[rbp] initial omxplayer

--- a/Makefile.in
+++ b/Makefile.in
@@ -111,6 +111,9 @@ ifeq (@HAVE_XBMC_NONFREE@,1)
 DIRECTORY_ARCHIVES += lib/UnrarXLib/UnrarXLib.a
 endif
 
+OMXPLAYER_ARCHIVES = xbmc/cores/omxplayer/OMXPlayer.a
+DIRECTORY_ARCHIVES += $(OMXPLAYER_ARCHIVES)
+
 BIN_DIRS = $(dir $(DIRECTORY_ARCHIVES))
 
 PAPCODECS_DIRS= \
