--- a/configure.in
+++ b/configure.in
@@ -1447,6 +1447,7 @@ else
         [ AC_MSG_ERROR($openmax_not_found) ])
       CFLAGS="$SAVE_CFLAGS"
       AC_DEFINE([HAVE_LIBOPENMAX], [2], [Define to 2 if you have the 'OpenMax' library.])
+      AC_DEFINE([HAVE_OMXPLAYER], [1], [Define to 1 if you have the 'OpenMax' library.])
       USE_OPENMAX=1
     fi
   else
@@ -1862,6 +1863,7 @@ OUTPUT_FILES="Makefile \
     xbmc/cdrip/Makefile \
     xbmc/cores/Makefile \
     xbmc/cores/VideoRenderers/Makefile \
+    xbmc/cores/omxplayer/Makefile \
     xbmc/cores/dvdplayer/Makefile \
     lib/Makefile \
     lib/libdvd/Makefile \
